--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "backend-project",
+  "name": "backendproject",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
